# capsolver

./: Dockerfile  Dockerfile.ext  Makefile  README.md  pyproject.toml
src/capsolver_api/: __init__.py  app.py  solver.py  utils.py
